--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
